1.1.8 - Fixed some minor issues. - Capped the maximum render distance for force-loaded entities — testing confirmed that overly large values lead to catastrophic results.